# kotlin-projects

./: README.md
grpc-kotlin-nginx-reverse-proxy/protos/src/main/proto/io/grpc/examples/helloworld/: BUILD.bazel
grpc-kotlin-nginx-reverse-proxy/server/: build.gradle.kts
grpc-kotlin-nginx-reverse-proxy/server/src/main/kotlin/io/grpc/examples/helloworld/: HelloWorldServer.kt  HelloWorldServer2.kt
grpc-nginx-reverse-proxy/client/src/main/kotlin/io/grpc/examples/helloworld/: HelloWorldClient.kt
grpc-nginx-reverse-proxy/protos/src/main/proto/io/grpc/examples/helloworld/: hello_world1.proto  hello_world2.proto
grpc-nginx-reverse-proxy/server/src/main/kotlin/io/grpc/examples/helloworld/: HelloWorldServer1.kt
grpc-smarthome/client/: build.gradle.kts
grpc-smarthome/client/src/main/kotlin/io/grpc/examples/smarthome/: SmartHomeClient.kt  TerminalPrint.kt
grpc-smarthome/protos/src/main/proto/io/grpc/examples/smarthome/: BUILD.bazel  fridge_controller.proto  light_controller.proto  sensor.proto
grpc-smarthome/server/: build.gradle.kts
grpc-smarthome/server/src/main/kotlin/io/grpc/examples/smarthome/: SmartFridgeServer.kt  SmartHomeServer.kt
grpc-smarthome/server/src/main/kotlin/io/grpc/examples/smarthome/entities/: FridgeController.kt  LightController.kt  Sensor.kt
sudoku-solver/: build.gradle.kts
sudoku-solver/src/main/kotlin/: Main.kt  SudokuSolver.kt
sudoku-solver/src/main/kotlin/sudoku/: SudokuSolver.kt
sudoku-solver/src/test/kotlin/sudoku/: SudokuSolverTest.kt
zookeeper/: build.gradle.kts  settings.gradle.kts
zookeeper/src/main/kotlin/: Main.kt
(+1 files in other folders)
