load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_grpc_grpc_java//:java_grpc_library.bzl", "java_grpc_library")
load("//:kt_jvm_grpc.bzl", "kt_jvm_grpc_library", "kt_jvm_proto_library")

licenses(["notice"])

package(default_visibility = ["//examples:__subpackages__"])

proto_library(
    name = "smart_home_proto",
    srcs = [
        "sensor.proto",
        "fridge_controller.proto",
        "light_controller.proto",
    ],
)

java_proto_library(
    name = "smart_home_java_proto",
    deps = [":smart_home_proto"],
)

java_lite_proto_library(
    name = "smart_home_java_proto_lite",
    deps = [":smart_home_proto"],
)

kt_jvm_proto_library(
    name = "smart_home_kt_proto",
    deps = [":smart_home_proto"],
)

kt_jvm_grpc_library(
    name = "smart_home_kt_grpc",
    srcs = [":smart_home_proto"],
    deps = [":smart_home_java_proto"],
)

kt_jvm_grpc_library(
    name = "smart_home_kt_grpc_lite",
    srcs = [":smart_home_proto"],
    flavor = "lite",
    deps = [":smart_home_java_proto_lite"],
)